<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aashays@uci.edu">Aashay Shah</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_ros2_control</depend>
  <depend>ros2_control</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>serial_driver</depend>
  <depend>asio_cmake_module</depend>
  <depend>io_context</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>hardware_interface</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
